[package]
name = "budget"
version = "0.1.0"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Summarise budget/finance information with file-per-finance"
repository = "https://github.com/chrisdavison/budget"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shellexpand = "*"
